--- a/.github/workflows/Terraform.yml
+++ b/.github/workflows/Terraform.yml
@@ -36,7 +36,7 @@ jobs:
         ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
         ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
         ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-      run: terrform init
+      run: terraform init
 
     # Run a terraform plan for pull requests only
     - name: Terraform Plan
