--- a/.github/workflows/defender-for-devops.yml
+++ b/.github/workflows/defender-for-devops.yml
@@ -30,7 +30,14 @@ jobs:
   MSDO:
     # currently only windows latest is supported
     runs-on: windows-latest
-
+    
+    permissions:
+      contents: read
+      id-token: write
+      actions: read
+      # Write access for security-events is only required for customers looking for MSDO results to appear in the codeQL security alerts tab on GitHub (Requires GHAS)
+      security-events: write
+  
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-dotnet@v4
