--- a/policies/nsg.yml
+++ b/policies/nsg.yml
@@ -6,7 +6,6 @@ metadata:
   category: "NETWORKING"
   severity: "HIGH"
 definition:
-  not:
     or:
       - cond_type: "attribute"
         resource_types:
@@ -26,7 +25,7 @@ definition:
         resource_types:
           - "azurerm_network_security_rule"
         attribute: "source_address_prefix"
-        operator: "equals"
+        operator: "not_equals"
         value: "Internet"
 
       - cond_type: "attribute"
