--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -44,7 +44,7 @@ jobs:
           scan-ref: '.'  # Scan the current directory
           format: 'sarif'
           output: 'trivy-config-results.sarif'
-          config-check: ./custom-policies
+          trivy-check: ./custom-policies
           exit-code: '0'
           severity: 'CRITICAL,HIGH'
         # Scans for misconfigurations in Terraform, Kubernetes, etc.
