--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -2,15 +2,10 @@
 # They are provided by a third-party and are governed by
 # separate terms of service, privacy policy, and support
 # documentation.
-name: trivy
+name: Trivy Terraform Scan
 
 on:
-  push:
-    branches: [ "main" ]  # Trigger scan on push to main branch
-  pull_request:
-    branches: [ "main" ]  # Trigger scan on PRs targeting main branch
-  schedule:
-    - cron: '24 7 * * 4'  # Run weekly on Thursdays at 07:24 UTC
+  workflow_call:
 
 jobs:
   trivy-scan:
@@ -18,7 +13,6 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read           # Needed for actions/checkout
-      id-token: write
       security-events: write   # Needed to upload SARIF results to GitHub Security tab
       actions: read            # Required for private repos using GitHub Actions
 
@@ -28,7 +22,7 @@ jobs:
         # Checks out the repository code so Trivy can scan it
 
       - name: Run Trivy IaC Scan
-        uses: aquasecurity/trivy-action@0.30.0
+        uses: aquasecurity/trivy-action@0.31.0
         with:
           scan-type: 'fs'  # File system scan (for IaC vulnerabilities)
           format: 'sarif'  # Output format for GitHub Code Scanning
@@ -38,13 +32,12 @@ jobs:
         # Scans the codebase for IaC-related vulnerabilities
 
       - name: Run Trivy Config Scan
-        uses: aquasecurity/trivy-action@0.30.0
+        uses: aquasecurity/trivy-action@0.31.0
         with:
           scan-type: 'config'  # Configuration misconfiguration scan
           scan-ref: '.'  # Scan the current directory
           format: 'sarif'
           output: 'trivy-config-results.sarif'
-          trivy-config: ./custom-policies/trivyconfig.yml
           exit-code: '0'
           severity: 'CRITICAL,HIGH'
         # Scans for misconfigurations in Terraform, Kubernetes, etc.
