--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -5,7 +5,10 @@
 name: Trivy Terraform Scan
 
 on:
-  workflow_call:
+  push:
+    branches: ["main"]
+  pull_request:
+    branches: ["main"]
 
 jobs:
   trivy-scan:
