--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -5,10 +5,7 @@
 name: Trivy Terraform Scan
 
 on:
-  push:
-    branches: ["main"]
-  pull_request:
-    branches: ["main"]
+  workflow_call:
 
 jobs:
   trivy-scan:
@@ -43,6 +40,7 @@ jobs:
           output: 'trivy-config-results.sarif'
           exit-code: '0'
           severity: 'CRITICAL,HIGH'
+          trivy-config: .\custom-policies\trivyconfig.yml
         # Scans for misconfigurations in Terraform, Kubernetes, etc.
 
       - name: Upload IaC Scan Results
