--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -39,9 +39,9 @@ jobs:
         with:
           scan-type: 'config'  # Configuration misconfiguration scan
           scan-ref: '.'  # Scan the current directory
-          trivy-config: .\custom-policies\trivyconfig.yml
           format: 'sarif'
           output: 'trivy-config-results.sarif'
+          trivy-config: ./custom-policies/trivyconfig.yml
           exit-code: '0'
           severity: 'CRITICAL,HIGH'
         # Scans for misconfigurations in Terraform, Kubernetes, etc.
