--- a/custom-policies/nsg.yml
+++ b/custom-policies/nsg.yml
@@ -30,3 +30,28 @@ definition:
         attribute: "source_address_prefix"
         operator: "equals"
         value: "0.0.0.0"    
+    or:
+      - cond_type: "attribute"
+        resource_types:
+          - "aazurerm_network_security_rule"
+        attribute: "source_address_prefix"
+        operator: "equals"
+        value: "*"
+      - cond_type: "attribute"
+        resource_types:
+          - "azurerm_network_security_rule"
+        attribute: "source_address_prefix"
+        operator: "equals"
+        value: "VirtualNetwork"    
+      - cond_type: "attribute"
+        resource_types:
+          - "azurerm_network_security_rule"
+        attribute: "source_address_prefix"
+        operator: "equals"
+        value: "Internet"
+      - cond_type: "attribute"
+        resource_types:
+          - "azurerm_network_security_rule"
+        attribute: "source_address_prefix"
+        operator: "equals"
+        value: "0.0.0.0"    
