--- a/custom-policies/nsg.yml
+++ b/custom-policies/nsg.yml
@@ -5,6 +5,7 @@ metadata:
   category: "NETWORKING"
   severity: "HIGH"
 definition:
+  not:
     or:
       - cond_type: "attribute"
         resource_types:
