--- a/.github/workflows/defender-for-devops.yml
+++ b/.github/workflows/defender-for-devops.yml
@@ -20,8 +20,10 @@ jobs:
       security-events: write
 
     steps:
+
       # Checkout your code repository to scan
-    - uses: actions/checkout@v4
+    - name: Checkout Code
+      uses: actions/checkout@v4
 
       # Run analyzers
     - name: Run Microsoft Security DevOps
@@ -32,15 +34,15 @@ jobs:
       tools: 'checkov'
 
       # Upload alerts to the Security tab - required for MSDO results to appear in the codeQL security alerts tab on GitHub (Requires GHAS)
-      - name: Upload alerts to Security tab
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: ${{ steps.msdo.outputs.sarifFile }}
+    - name: Upload alerts to Security tab
+      uses: github/codeql-action/upload-sarif@v3
+      with:
+        sarif_file: ${{ steps.msdo.outputs.sarifFile }}
 
       # Upload alerts file as a workflow artifact - required for MSDO results to appear in the codeQL security alerts tab on GitHub (Requires GHAS)
-      - name: Upload alerts file as a workflow artifact
-        uses: actions/upload-artifact@v3
-        with:  
+    - name: Upload alerts file as a workflow artifact
+      uses: actions/upload-artifact@v3
+      with:  
           name: alerts
           path: ${{ steps.msdo.outputs.sarifFile }}
 
