--- a/.github/workflows/defender-for-devops.yml
+++ b/.github/workflows/defender-for-devops.yml
@@ -8,7 +8,13 @@ on:
     branches: ["main"]
 
 jobs:
+  sample:
     name: Microsoft Security DevOps
+
+jobs:
+  sample:
+    name: Microsoft Security DevOps
+
     # Windows and Linux agents are supported
     runs-on: ubuntu-latest
 
@@ -18,6 +24,7 @@ jobs:
       actions: read
       # Write access for security-events is only required for customers looking for MSDO results to appear in the codeQL security alerts tab on GitHub (Requires GHAS)
       security-events: write
+
 
     steps:
 
