--- a/.github/workflows/defender-for-devops.yml
+++ b/.github/workflows/defender-for-devops.yml
@@ -33,7 +33,7 @@ jobs:
       uses: microsoft/security-devops-action@latest
       id: msdo
       with:
-        config: gdnconfig/checkov.gdnconfig
+        config: gdnconfig/checkov-linux.gdnconfig
 
       # Upload alerts to the Security tab - required for MSDO results to appear in the codeQL security alerts tab on GitHub (Requires GHAS)
     - name: Upload alerts to Security tab
