--- a/.github/workflows/defender-for-devops.yml
+++ b/.github/workflows/defender-for-devops.yml
@@ -12,7 +12,7 @@ jobs:
     name: Microsoft Security DevOps
 
     # Windows and Linux agents are supported
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     permissions:
       contents: read
@@ -33,7 +33,7 @@ jobs:
       uses: microsoft/security-devops-action@latest
       id: msdo
       with:
-        config: gdnconfig/checkov-linux.gdnconfig
+        config: gdnconfig/checkov-windows.gdnconfig
 
       # Upload alerts to the Security tab - required for MSDO results to appear in the codeQL security alerts tab on GitHub (Requires GHAS)
     - name: Upload alerts to Security tab
