--- a/.github/workflows/defender-for-devops.yml
+++ b/.github/workflows/defender-for-devops.yml
@@ -34,6 +34,8 @@ jobs:
       id: msdo
       with:
        tools: checkov
+       config: gdnconfig/checkov-windows.gdnconfig
+
 
       # Upload alerts to the Security tab - required for MSDO results to appear in the codeQL security alerts tab on GitHub (Requires GHAS)
     - name: Upload alerts to Security tab
