--- a/.github/workflows/defender-for-devops.yml
+++ b/.github/workflows/defender-for-devops.yml
@@ -35,7 +35,7 @@ jobs:
       with:
        tools: checkov
       env:
-        GDN_CHECKOV_EXTERNALCHECKSDIR: /custom-policies
+        GDN_CHECKOV_EXTERNALCHECKSDIR: custom-policies/
 
       # Upload alerts to the Security tab - required for MSDO results to appear in the codeQL security alerts tab on GitHub (Requires GHAS)
     - name: Upload alerts to Security tab
