--- a/custom-policies/nsg2.yml
+++ b/custom-policies/nsg2.yml
@@ -1,6 +1,6 @@
 ---
 metadata:
-  name: "Disallow 'Any', 'VirtualNetwork', or 'Internet' as source address in inbound NSG rules"
+  name: "Disallow 'Any', 'VirtualNetwork', or 'Internet' as source address in inbound NSG"
   id: "CKV2_CUSTOM_1"
   category: "NETWORKING"
   severity: "CRITICAL"
@@ -9,25 +9,25 @@ definition:
     or:
       - cond_type: "attribute"
         resource_types:
-          - "aazurerm_network_security_rule"
+          - "aazurerm_network_security_group"
         attribute: "source_address_prefix"
         operator: "equals"
         value: "*"
       - cond_type: "attribute"
         resource_types:
-          - "azurerm_network_security_rule"
+          - "azurerm_network_security_group"
         attribute: "source_address_prefix"
         operator: "equals"
         value: "VirtualNetwork"    
       - cond_type: "attribute"
         resource_types:
-          - "azurerm_network_security_rule"
+          - "azurerm_network_security_group"
         attribute: "source_address_prefix"
         operator: "equals"
         value: "Internet"
       - cond_type: "attribute"
         resource_types:
-          - "azurerm_network_security_rule"
+          - "azurerm_network_security_group"
         attribute: "source_address_prefix"
         operator: "equals"
         value: "0.0.0.0/0"    
