--- a/.github/workflows/defender-for-devops.yml
+++ b/.github/workflows/defender-for-devops.yml
@@ -33,7 +33,7 @@ jobs:
       uses: microsoft/security-devops-action@latest
       id: msdo
       with:
-       tools: checkov, trivy
+       tools: checkov
       env:
         GDN_CHECKOV_EXTERNALCHECKSDIR: custom-policies/
 
