--- a/Config/trivyconfig.yml
+++ b/Config/trivyconfig.yml
@@ -1,13 +1,4 @@
+
 rego:
   # Same as '--config-check'
-  check: [custom-policies/nsg.rego]
-  # Same as '--config-data'
-  data: []
-  # Same as '--include-deprecated-checks'
-  include-deprecated-checks: false
-  # Same as '--check-namespaces'
-  namespaces: []
-  # Same as '--skip-check-update'
-  skip-check-update: false
-  # Same as '--trace-rego'
-  trace: false
+  check: custom-policies/nsg.rego
