--- a/.github/workflows/defender-for-devops.yml
+++ b/.github/workflows/defender-for-devops.yml
@@ -36,6 +36,7 @@ jobs:
        tools: checkov, terrascan, Template Analyzer
       env:
         GDN_CHECKOV_EXTERNALCHECKSDIR: custom-policies/
+        GDN_TERRASCAN_POLICYPATH: custom-policies/
 
       # Upload alerts to the Security tab - required for MSDO results to appear in the codeQL security alerts tab on GitHub (Requires GHAS)
     - name: Upload alerts to Security tab
