--- a/.github/workflows/trivy-IaC-scan.yml
+++ b/.github/workflows/trivy-IaC-scan.yml
@@ -24,22 +24,12 @@ jobs:
         uses: actions/checkout@v4
         # Checks out the repository code so Trivy can scan it
 
-      - name: Run Trivy IaC Scan
-        uses: aquasecurity/trivy-action@0.31.0
-        with:
-          scan-type: 'fs'  # File system scan (for IaC vulnerabilities)
-          format: 'sarif'  # Output format for GitHub Code Scanning
-          output: 'trivy-fs-results.sarif'  # Output file name
-          exit-code: '0'  # Do not fail the workflow on findings
-          severity: 'CRITICAL,HIGH'  # Only report high and critical issues
-        # Scans the codebase for IaC-related vulnerabilities
-
       - name: Run Trivy Config Scan
         uses: aquasecurity/trivy-action@0.31.0
         with:
           scan-type: 'config'  # Configuration misconfiguration scan
           scan-ref: '.'  # Scan the current directory
-          trivy-config: trivy.yml
+          trivy-config: Config/trivy.yml
           version: latest
           format: 'sarif'
           output: 'trivy-config-results.sarif'
