--- a/custom-policy-checkov/nsg.yml
+++ b/custom-policy-checkov/nsg.yml
@@ -2,7 +2,7 @@
 metadata:
   name: "Disallow 'Any', 'VirtualNetwork', or 'Internet' as source address in inbound NSG rules"
   id: "CKV2_CUSTOM_1"
-  category: "NETWORKING"
+  category: "Infrastructure as Code"
   severity: "CRITICAL"
 definition:
   not:
@@ -30,4 +30,9 @@ definition:
           - "azurerm_network_security_rule"
         attribute: "source_address_prefix"
         operator: "equals"
-        value: "0.0.0.0/0"    
+        value: "0.0.0.0/0"
+        resource_types: 
+        - "azurerm_network_security_group"
+        attribute: "source_address_prefix"
+        operator: "equals"
+        value: "10.0.0.0/8"        
