--- a/.github/workflows/defender-for-devops.yml
+++ b/.github/workflows/defender-for-devops.yml
@@ -33,10 +33,11 @@ jobs:
       uses: microsoft/security-devops-action@latest
       id: msdo
       with:
-       tools: checkov, terrascan, Template Analyzer
+       tools: checkov
       env:
         GDN_CHECKOV_EXTERNALCHECKSDIR: custom-policy-checkov/
-        GDN_TERRASCAN_POLICYPATH: custom-policy-terrascan/
+        GDN_CHECKOV_CHECK: CKV_AZURE_9, CKV_AZURE_10
+        
 
       # Upload alerts to the Security tab - required for MSDO results to appear in the codeQL security alerts tab on GitHub (Requires GHAS)
     - name: Upload alerts to Security tab
