--- a/custom-policy-checkov/nsg3.yml
+++ b/custom-policy-checkov/nsg3.yml
@@ -1,34 +1,27 @@
 ---
 metadata:
-  name: "Disallow 'Any', 'VirtualNetwork', or 'Internet' as source address in inbound NSG rules"
+  name: "Disallow 'Any', 'VirtualNetwork', or 'Internet' as source address in inbound NSG"
   id: "CKV_CUSTOM_3"
   category: "Infrastructure as Code"
   severity: "CRITICAL"
 definition:
-  not:
-    and:  
-       - cond_type: "attribute"
-        resource_types:
-          - "azurerm_network_security_rule"
-        attribute: "destination_port_range"
-        operator: "equals"
+  and:  
+      - cond_type: "attribute"
+      resource_types:
+        - "azurerm_network_security_rule"
+      attribute: "destination_port_range"
+      operator: "equals"
           value: "23"     
       - or:
           - cond_type: "attribute"
             resource_types:
-              - "azurerm_network_security_rule"
+              - "aazurerm_network_security_group"
             attribute: "source_address_prefix"
             operator: "equals"
             value: "*"
           - cond_type: "attribute"
             resource_types:
-              - "azurerm_network_security_rule"
+              - "azurerm_network_security_group"
             attribute: "source_address_prefix"
             operator: "equals"
-            value: "Internet"
-          - cond_type: "attribute"
-            resource_types:
-              - "azurerm_network_security_rule"
-            attribute: "source_address_prefix"
-            operator: "equals"
-            value: "0.0.0.0/0"
+            value: "VirtualNetwork"    
