--- a/custom-policy-checkov/nsg3.yml
+++ b/custom-policy-checkov/nsg3.yml
@@ -5,33 +5,23 @@ metadata:
   category: "Infrastructure as Code"
   severity: "CRITICAL"
 definition:
-    or:
-      - cond_type: "attribute"
-        resource_types:
+  and:
+        - cond_type: "attribute"
+          resource_types:
           - "aazurerm_network_security_group"
-        attribute: "source_address_prefix"
-        operator: "equals"
-        value: "*"
-      - cond_type: "attribute"
-        resource_types:
-          - "azurerm_network_security_group"
-        attribute: "source_address_prefix"
-        operator: "equals"
-        value: "VirtualNetwork"    
-      - cond_type: "attribute"
-        resource_types:
-          - "azurerm_network_security_group"
-        attribute: "source_address_prefix"
-        operator: "equals"
-        value: "Internet"
-      - cond_type: "attribute"
-        resource_types:
-          - "azurerm_network_security_group"
-        attribute: "source_address_prefix"
-        operator: "equals"
-        value: "0.0.0.0/0"
-        resource_types: 
-        - "azurerm_network_security_group"
-        attribute: "source_address_prefix"
-        operator: "equals"
-        value: "10.0.0.0/8"     
+          attribute: "destination_port_range"
+          operator: "equals"
+          value: "3389"  
+        - or:
+              - cond_type: "attribute"
+                resource_types:
+                - "aazurerm_network_security_group"
+                attribute: "source_address_prefix"
+                operator: "equals"
+                value: "*"
+              - cond_type: "attribute"
+                resource_types:
+                - "azurerm_network_security_group"
+                attribute: "source_address_prefix"
+                operator: "equals"
+                value: "VirtualNetwork"    
