--- a/custom-policy-checkov/nsg3.yml
+++ b/custom-policy-checkov/nsg3.yml
@@ -11,16 +11,9 @@ definition:
           attribute: "destination_port_range"
           operator: "equals"  
           value: "3389"  
-          or:
-              - cond_type: "attribute"
-                resource_types:
-                  - "azurerm_network_security_group"
-                attribute: "source_address_prefix"
-                operator: "equals"
-                value: "*"
-              - cond_type: "attribute"
-                resource_types:
-                  - "azurerm_network_security_group"
-                attribute: "source_address_prefix"
-                operator: "equals"
-                value: "VirtualNetwork"        
+          cond_type: "attribute"
+          resource_types:
+          - "azurerm_network_security_group"
+          attribute: "source_address_prefix"
+          operator: "equals"
+          value: "*"
