--- a/custom-policy-checkov/nsg3.yml
+++ b/custom-policy-checkov/nsg3.yml
@@ -6,13 +6,13 @@ metadata:
   severity: "CRITICAL"
 definition:
       and:
-          cond_type: "attribute"
+        - cond_type: "attribute"
           resource_types:
             - "azurerm_network_security_group"
           attribute: "destination_port_range"
           operator: "equals"  
           value: "3389"  
-          cond_type: "attribute"
+        - cond_type: "attribute"
           resource_types:
           - "azurerm_network_security_group"
           attribute: "source_address_prefix"
