--- a/custom-policy-checkov/nsg3.yml
+++ b/custom-policy-checkov/nsg3.yml
@@ -1,33 +1,33 @@
 ---
 metadata:
-  name: "Disallow 'Any', 'VirtualNetwork', or 'Internet' as source address in inbound NSG"
-  id: "CKV_CUSTOM_2"
+  name: "Disallow 'Any', 'VirtualNetwork', or 'Internet' as source address in inbound NSG rules"
+  id: "CKV_CUSTOM_1"
   category: "Infrastructure as Code"
   severity: "CRITICAL"
 definition:
- not:
+  not:
     or:
       - cond_type: "attribute"
         resource_types:
-          - "azurerm_network_security_group"
+          - "azurerm_network_security_rule"
         attribute: "source_address_prefix"
         operator: "equals"
         value: "*"
       - cond_type: "attribute"
         resource_types:
-          - "azurerm_network_security_group"
+          - "azurerm_network_security_rule"
         attribute: "source_address_prefix"
         operator: "equals"
         value: "VirtualNetwork"    
       - cond_type: "attribute"
         resource_types:
-          - "azurerm_network_security_group"
+          - "azurerm_network_security_rule"
         attribute: "source_address_prefix"
         operator: "equals"
         value: "Internet"
       - cond_type: "attribute"
         resource_types:
-          - "azurerm_network_security_group"
+          - "azurerm_network_security_rule"
         attribute: "source_address_prefix"
         operator: "equals"
         value: "0.0.0.0/0"
@@ -35,4 +35,4 @@ definition:
         - "azurerm_network_security_group"
         attribute: "source_address_prefix"
         operator: "equals"
-        value: "10.0.0.0/8"    
+        value: "10.0.0.0/8"       
