--- a/custom-policy-checkov/nsg3.yml
+++ b/custom-policy-checkov/nsg3.yml
@@ -1,33 +1,32 @@
 ---
 metadata:
-  name: "Disallow 'Any', 'VirtualNetwork', or 'Internet' as source address in inbound NSG rules"
-  id: "CKV_CUSTOM_1"
+  name: "Disallow 'Any', 'VirtualNetwork', or 'Internet' as source address in inbound NSG"
+  id: "CKV_CUSTOM_3"
   category: "Infrastructure as Code"
   severity: "CRITICAL"
 definition:
-  not:
     or:
       - cond_type: "attribute"
         resource_types:
-          - "azurerm_network_security_rule"
+          - "azurerm_network_security_group"
         attribute: "source_address_prefix"
         operator: "equals"
         value: "*"
       - cond_type: "attribute"
         resource_types:
-          - "azurerm_network_security_rule"
+          - "azurerm_network_security_group"
         attribute: "source_address_prefix"
         operator: "equals"
         value: "VirtualNetwork"    
       - cond_type: "attribute"
         resource_types:
-          - "azurerm_network_security_rule"
+          - "azurerm_network_security_group"
         attribute: "source_address_prefix"
         operator: "equals"
         value: "Internet"
       - cond_type: "attribute"
         resource_types:
-          - "azurerm_network_security_rule"
+          - "azurerm_network_security_group"
         attribute: "source_address_prefix"
         operator: "equals"
         value: "0.0.0.0/0"
@@ -35,4 +34,4 @@ definition:
         - "azurerm_network_security_group"
         attribute: "source_address_prefix"
         operator: "equals"
-        value: "10.0.0.0/8"       
+        value: "10.0.0.0/8"    
