--- a/custom-policy-checkov/nsg3.yml
+++ b/custom-policy-checkov/nsg3.yml
@@ -1,20 +1,14 @@
 ---
 metadata:
-  name: "Disallow 'Any', 'VirtualNetwork', or 'Internet' as source address in inbound NSG"
+  name: "Disallow 'Internet' as source address in inbound NSG"
   id: "CKV_CUSTOM_3"
   category: "Infrastructure as Code"
   severity: "CRITICAL"
 definition:
-    or:
+  not: 
       - cond_type: "attribute"
         resource_types:
           - "azurerm_network_security_group"
         attribute: "source_address_prefix"
         operator: "equals"
         value: "Internet"
-      - cond_type: "attribute"
-        resource_types:
-          - "azurerm_network_security_group"
-        attribute: "source_address_prefix"
-        operator: "equals"
-        value: "0.0.0.0/0"
