--- a/custom-policy-checkov/nsg3.yml
+++ b/custom-policy-checkov/nsg3.yml
@@ -5,8 +5,7 @@ metadata:
   category: "Infrastructure as Code"
   severity: "CRITICAL"
 definition:
-  and:
-      - cond_type: "attribute"
+        cond_type: "attribute"
         resource_types:
           - "azurerm_network_security_group"
         attribute: "source_address_prefix"
