--- a/custom-policy-checkov/nsg3.yml
+++ b/custom-policy-checkov/nsg3.yml
@@ -1,13 +1,20 @@
 ---
 metadata:
-  name: "Disallow 'Internet' as source address in inbound NSG"
+  name: "Disallow 'Any', 'VirtualNetwork', or 'Internet' as source address in inbound NSG rules"
   id: "CKV_CUSTOM_3"
   category: "Infrastructure as Code"
   severity: "CRITICAL"
 definition:
-        cond_type: "attribute"
+    or:
+      - cond_type: "attribute"
         resource_types:
-          - "azurerm_network_security_group"
+          - "azurerm_network_security_rule"
         attribute: "source_address_prefix"
         operator: "not_equals"
         value: "Internet"
+      - cond_type: "attribute"
+        resource_types:
+          - "azurerm_network_security_rule"
+        attribute: "source_address_prefix"
+        operator: "equals"
+        value: "VirtualNetwork"    
