--- a/custom-policy-checkov/nsg3.yml
+++ b/custom-policy-checkov/nsg3.yml
@@ -16,5 +16,5 @@ definition:
         resource_types:
           - "azurerm_network_security_rule"
         attribute: "source_address_prefix"
-        operator: "equals"
+        operator: "not_equals"
         value: "VirtualNetwork"    
