--- a/custom-policy-checkov/nsg3.yml
+++ b/custom-policy-checkov/nsg3.yml
@@ -5,16 +5,17 @@ metadata:
   category: "Infrastructure as Code"
   severity: "CRITICAL"
 definition:
+ not:
     or:
       - cond_type: "attribute"
         resource_types:
           - "azurerm_network_security_rule"
         attribute: "source_address_prefix"
-        operator: "not_equals"
+        operator: "equals"
         value: "Internet"
       - cond_type: "attribute"
         resource_types:
           - "azurerm_network_security_rule"
         attribute: "source_address_prefix"
-        operator: "not_equals"
+        operator: "equals"
         value: "VirtualNetwork"    
