--- a/custom-policy-checkov/nsg3.yml
+++ b/custom-policy-checkov/nsg3.yml
@@ -6,7 +6,7 @@ metadata:
   severity: "CRITICAL"
 definition:
  not:
-    or:
+    and:
       - cond_type: "attribute"
         resource_types:
           - "azurerm_network_security_rule"
@@ -16,6 +16,6 @@ definition:
       - cond_type: "attribute"
         resource_types:
           - "azurerm_network_security_rule"
-        attribute: "source_address_prefix"
+        attribute: "destination_port_range"
         operator: "equals"
-        value: "VirtualNetwork"    
+        value: "3389"    
