--- a/custom-policy-checkov/nsg3.yml
+++ b/custom-policy-checkov/nsg3.yml
@@ -7,22 +7,29 @@ metadata:
 definition:
  not:
     and:
-      - cond_type: "attribute"
-        resource_types:
-          - "azurerm_network_security_rule"
-        attribute: "source_address_prefix"
-        operator: "equals"
-        value: "Internet"
-        or:
-          - cond_type: "attribute"
-            resource_types:
-              - "azurerm_network_security_rule"
-            attribute: "destination_port_range"
-            operator: "equals"
-            value: "3389"    
-          - cond_type: "attribute"
-            resource_types:
-              - "azurerm_network_security_rule"
-            attribute: "destination_port_range"
-            operator: "equals"
-            value: "22"    
+            or:
+              - cond_type: "attribute"
+                resource_types:
+                  - "azurerm_network_security_rule"
+                attribute: "source_address_prefix"
+                operator: "equals"
+                value: "Internet"
+              - cond_type: "attribute"
+                resource_types:
+                  - "azurerm_network_security_rule"
+                attribute: "source_address_prefix"
+                operator: "equals"
+                value: "VirtualNetwork"
+            or:
+              - cond_type: "attribute"
+                resource_types:
+                  - "azurerm_network_security_rule"
+                attribute: "destination_port_range"
+                operator: "equals"
+                value: "3389"    
+              - cond_type: "attribute"
+                resource_types:
+                  - "azurerm_network_security_rule"
+                attribute: "destination_port_range"
+                operator: "equals"
+                value: "22"    
