--- a/custom-policy-checkov/nsg-rules.yml
+++ b/custom-policy-checkov/nsg-rules.yml
@@ -5,7 +5,6 @@ metadata:
   category: "Infrastructure as Code"
   severity: "CRITICAL"
 definition:
- not:
     and:
           - cond_type: "attribute"
             resource_types:
@@ -23,7 +22,7 @@ definition:
             resource_types:
               - "azurerm_network_security_rule"
             attribute: "source_address_prefix"
-            operator: "within"
+            operator: "not_within"
             value: 
              - "Internet"
              - "VirtualNetwork"
