--- a/custom-policy-checkov/nsg-rules.yml
+++ b/custom-policy-checkov/nsg-rules.yml
@@ -31,7 +31,7 @@ definition:
             resource_types:
               - "azurerm_network_security_rule"
             attribute: "destination_port_range"
-            operator: "within"
+            operator: "not_within"
             value: 
              - "3389"
              - "22"
