--- a/custom-policy-checkov/nsg-rules.yml
+++ b/custom-policy-checkov/nsg-rules.yml
@@ -5,6 +5,7 @@ metadata:
   category: "Infrastructure as Code"
   severity: "CRITICAL"
 definition:
+ not:
     and:
           - cond_type: "attribute"
             resource_types:
@@ -22,7 +23,7 @@ definition:
             resource_types:
               - "azurerm_network_security_rule"
             attribute: "source_address_prefix"
-            operator: "not_within"
+            operator: "within"
             value: 
              - "Internet"
              - "VirtualNetwork"
@@ -31,7 +32,7 @@ definition:
             resource_types:
               - "azurerm_network_security_rule"
             attribute: "destination_port_range"
-            operator: "not_within"
+            operator: "within"
             value: 
              - "3389"
              - "22"
